# awRevolt

./: .gitignore  .gitmodules  CMakeLists.txt  buildAndroid.sh  buildLib.sh  buildTest.sh  downloadExtlibs.sh  install.sh  installAndroid.sh  installUnix.sh  installWindows.sh
cmake/: addFilesToTarget.cmake  awEngineDependencies.cmake  awGUIDependencies.cmake  awGraphicsDependencies.cmake  awReflectionDependencies.cmake  awTestsDependencies.cmake  awUtilsBuildDependencies.cmake  awUtilsDependencies.cmake  awUtilsFindDependencies.cmake  config.hpp.in  enableWarnings.cmake  utilsDependencies.cmake
cmake/buildDependencies/: awEngine.cmake  awUtils.cmake
cmake/dependencies/: nanovg.cmake  tinyFileDialogs.cmake
cmake/export/: awEngine.cmake  awGUI.cmake  awGraphics.cmake  awRuntime.cmake  awUtils.cmake
cmake/setDependencies/: awEngine.cmake  awGUI.cmake  awGraphics.cmake  awRuntime.cmake  awUtils.cmake
dependencies/: CMakeLists.txt  buildAndroidLibs.sh  buildLinuxLibs.sh
dependencies/cmake/depsWithoutCMake/: sqlite3.cmake
include/aw/: CMakeLists.txt  config.hpp
include/aw/engine/: CMakeLists.txt  engine.hpp  logCategories.hpp  settings.hpp  stateMachine.hpp  window.hpp  windowEvent.hpp  windowEventForward.hpp
include/aw/graphics/: CMakeLists.txt
include/aw/gui/: CMakeLists.txt  gui.hpp  string.hpp
include/aw/module/: CMakeLists.txt  exporter.hpp  module.hpp
include/aw/opengl/: CMakeLists.txt  loader.hpp  opengl.hpp  (+1 more)
include/aw/reflection/: CMakeLists.txt  reflection.hpp  typeDescriptor.hpp  typeDescriptorClass.hpp  typeDescriptorStruct.hpp  typeResolver.hpp
include/aw/reflection/builtinTypes/: CMakeLists.txt  primitiveTypes.hpp
include/aw/reflection/operations/: CMakeLists.txt  print.hpp
include/aw/utils/: CMakeLists.txt  assetInputStream.hpp  bBox.hpp  clock.hpp  color.hpp  colors.hpp  date.hpp  enumClassBitmask.hpp  log.hpp  path.hpp  rect.hpp  regex.hpp  streamReading.hpp  stringConverter.hpp  stringFormat.hpp  typeChecks.hpp  types.hpp
include/aw/utils/file/: CMakeLists.txt  assetInputStream.hpp  fileDialog.hpp  fileInputStream.hpp  fileOutputStream.hpp  path.hpp
include/aw/utils/math/: CMakeLists.txt  constants.hpp  frustum.hpp  matrix.hpp  quaternion.hpp  vector.hpp
include/aw/utils/messageBus/: CMakeLists.txt  listener.hpp  messageBus.hpp
include/aw/utils/spatial/: AABB.hpp  AABBIntersectors.hpp  AABBTriangleIntersector.hpp  CMakeLists.txt  boxCell.hpp  intersectors.hpp  octree.hpp  ray.hpp
include/aw/utils/spatial/intersectors/: AABBIntersectors.hpp  CMakeLists.txt  rayIntersectors.hpp
include/aw/utils/time/: CMakeLists.txt  clock.hpp  time.hpp
include/aw/utils/typeHelper/: CMakeLists.txt  staticForLoop.hpp  trueFalseTypes.hpp  typeChecks.hpp  typeCounter.hpp
src/aw/: CMakeLists.txt
src/aw/engine/: CMakeLists.txt  engine.cpp  settings.cpp  state.cpp  stateMachine.cpp  window.cpp
src/aw/engine/runtime/: CMakeLists.txt  state.cpp  stateMachine.cpp
src/aw/graphics/: CMakeLists.txt
src/aw/graphics/3d/: CMakeLists.txt  material.cpp  mesh.cpp  meshAnimation.cpp  meshInstance.cpp  meshPose.cpp  meshSkeleton.cpp  orbitCameraController.cpp  transform.cpp  transform.cpp.orig
src/aw/graphics/core/: CMakeLists.txt  bufferObject.cpp  camera.cpp  frameBuffer.cpp  geometry.cpp  image.cpp  indicesBuffer.cpp  pixelFormats.hpp  postProcessRenderer.cpp  renderBuffer.cpp  renderer.cpp  shaderProgram.cpp  shaderStage.cpp  stb_image.hpp  texture2D.cpp  vertex.cpp  vertexArrayObject.cpp  vertexBuffer.cpp
src/aw/gui/: CMakeLists.txt  gui.cpp
src/aw/gui/renderer/: CMakeLists.txt  nanovgDrawHelper.hpp  nanovgRenderer.cpp
src/aw/gui/style/: CMakeLists.txt  defaultStyles.cpp  style.cpp  styleManager.cpp
src/aw/gui/widgets/: .button.cpp.swp  CMakeLists.txt  bin.cpp  button.cpp  checkedTextBox.cpp  container.cpp  contextMenu.cpp  floatingContainer.cpp  label.cpp  linearContainer.cpp  list.cpp  listItem.cpp  menu.cpp  menuItem.cpp  menuSubItem.cpp  panel.cpp  screen.cpp  scrollableBin.cpp  textBox.cpp  tileContainer.cpp  treeView.cpp  typedTextBox.cpp  viewport.cpp  widget.cpp  window.cpp
src/aw/module/: CMakeLists.txt  exporter.cpp  module.cpp
src/aw/opengl/: CMakeLists.txt  loader.cpp  opengl.cpp
src/aw/opengl/impl/: gl.cpp  gl_core_3_3.cpp  gl_core_4_5.cpp  gl_core_4_5.hpp
src/aw/reflection/: CMakeLists.txt  predefinedTypes.cpp
src/aw/runtime/: CMakeLists.txt
src/aw/runtime/components/: CMakeLists.txt  meshRenderer.cpp  transform.cpp
src/aw/runtime/entitySystem/: CMakeLists.txt  entity.cpp  entitySystem.cpp
src/aw/runtime/loaders/: CMakeLists.txt  assimpLoader.cpp
src/aw/runtime/renderers/: CMakeLists.txt  meshRenderer.cpp
src/aw/runtime/resourceManager/: CMakeLists.txt  resourceDatabase.cpp
src/aw/runtime/resourceManager/factories/: CMakeLists.txt  meshFactory.cpp  textureFactory.cpp
src/aw/runtime/scene/: CMakeLists.txt  meshNode.cpp  sceneLoader.cpp  sceneNode.cpp  sceneWriter.cpp
src/aw/runtime/scene/objects/: CMakeLists.txt  staticMesh.cpp
src/aw/runtime/shaderTechniques/: CMakeLists.txt
src/aw/runtime/systems/: CMakeLists.txt  meshRendererSystem.cpp  transformSystem.cpp
src/aw/utils/: CMakeLists.txt  assetInputStream.cpp  bBox.cpp  color.cpp  date.cpp  log.cpp  path.cpp  streamReading.cpp  stringFormat.cpp
src/aw/utils/file/: CMakeLists.txt  assetInputStream.cpp  fileDialog.cpp  fileInputStream.cpp  fileOutputStream.cpp  path.cpp
src/aw/utils/file/impl/: CMakeLists.txt  androidAssetBuffer.cpp  androidAssetBuffer.hpp  androidStreamBuffer.cpp
src/aw/utils/impl/: CMakeLists.txt  androidAssetBuffer.cpp  androidAssetBuffer.hpp  androidStreamBuffer.hpp
src/aw/utils/math/: CMakeLists.txt  frustum.cpp  matrix.cpp  quaternion.cpp  vector.cpp
src/aw/utils/spatial/: AABB.cpp  AABBTriangleIntersector.cpp  CMakeLists.txt  octree.cpp  ray.cpp
src/aw/utils/spatial/intersectors/: AABBIntersectors.cpp  CMakeLists.txt  rayIntersectors.cpp
src/aw/utils/time/: CMakeLists.txt  date.cpp
tests/: CMakeLists.txt
tests/runtime/: CMakeLists.txt
tests/utils/: CMakeLists.txt  testMessageBus.cpp  testStringFormat.cpp
(+150 files in other folders)
