#
add_subdirectory(engine)
add_subdirectory(graphics)
add_subdirectory(gui)
add_subdirectory(module)
add_subdirectory(opengl)
add_subdirectory(runtime)
add_subdirectory(utils)

set(SOURCE_FILES_UTILS ${SOURCE_FILES_UTILS} PARENT_SCOPE)
set(SOURCE_FILES_GRAPHICS ${SOURCE_FILES_GRAPHICS} PARENT_SCOPE)
set(SOURCE_FILES_ENGINE ${SOURCE_FILES_ENGINE} PARENT_SCOPE)
set(SOURCE_FILES_REFLECTION ${SOURCE_FILES_REFLECTION} PARENT_SCOPE)
set(SOURCE_FILES_GUI ${SOURCE_FILES_GUI} PARENT_SCOPE)

set(HEADER_FILES_UTILS ${HEADER_FILES_UTILS} PARENT_SCOPE)
set(HEADER_FILES_GRAPHICS ${HEADER_FILES_GRAPHICS} PARENT_SCOPE )
set(HEADER_FILES_ENGINE ${HEADER_FILES_ENGINE} PARENT_SCOPE)
set(HEADER_FILES_REFLECTION ${HEADER_FILES_REFLECTION} PARENT_SCOPE)
set(HEADER_FILES_GUI ${HEADER_FILES_GUI} PARENT_SCOPE)
