add_subdirectory(file)
add_subdirectory(math)
add_subdirectory(messageBus)
add_subdirectory(spatial)
add_subdirectory(time)
add_subdirectory(typeHelper)

add_to_target(awUtils PUBLIC color.hpp)
add_to_target(awUtils PUBLIC colors.hpp)
add_to_target(awUtils PUBLIC log.hpp)
add_to_target(awUtils PUBLIC streamReading)
add_to_target(awUtils PUBLIC stringConverter.hpp)
add_to_target(awUtils PUBLIC stringFormat.hpp)
add_to_target(awUtils PUBLIC types.hpp)

